Implemented Settings Screen

--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -375,13 +375,14 @@
     <string name="settings_account_linked_accounts_title">Linked Accounts</string>
     <string name="settings_account_change_email_title">Change Email Address</string>
     <string name="settings_account_change_password_title">Change Password</string>
-    <string name="settings_title_settings">Settings</string>
+    <string name="settings_settings_title">Settings</string>
     <string name="settings_settings_locale_title">Language</string>
     <string name="settings_settings_theme_title">Theme</string>
-    <string name="settings_settings_donate_title">Donate</string>
-    <string name="settings_settings_improve_translations_title">Improve Translations</string>
-    <string name="settings_settings_rate_us_title">Rate Us</string>
-    <string name="settings_settings_privacy_policy_title">Privacy Policy</string>
+    <string name="settings_miscellaneous_title">Miscellaneous</string>
+    <string name="settings_miscellaneous_donate_title">Donate</string>
+    <string name="settings_miscellaneous_improve_translations_title">Improve Translations</string>
+    <string name="settings_miscellaneous_rate_us_title">Rate Us</string>
+    <string name="settings_miscellaneous_privacy_policy_title">Privacy Policy</string>
     <string name="settings_btn_logout">Logout</string>
     <string name="settings_send_verification_message_success">The verification email has been successfully sent to your inbox.</string>
     <string name="settings_send_verification_email_error_email_not_provided">An email address must be provided.</string>
