--- a/app/src/main/res/values-fa-rIR/strings.xml
+++ b/app/src/main/res/values-fa-rIR/strings.xml
@@ -375,13 +375,14 @@
     <string name="settings_account_linked_accounts_title">حساب‌های متصل</string>
     <string name="settings_account_change_email_title">تغییر آدرس ایمیل</string>
     <string name="settings_account_change_password_title">تغییر رمز‌عبور</string>
-    <string name="settings_title_settings">تنظیمات</string>
+    <string name="settings_settings_title">تنظیمات</string>
     <string name="settings_settings_locale_title">زبان</string>
     <string name="settings_settings_theme_title">تم</string>
-    <string name="settings_settings_donate_title">حمایت</string>
-    <string name="settings_settings_improve_translations_title">بهبود ترجمه</string>
-    <string name="settings_settings_rate_us_title">امتیاز به برنامه</string>
-    <string name="settings_settings_privacy_policy_title">حریم خصوصی</string>
+    <string name="settings_miscellaneous_title">متفرقه</string>
+    <string name="settings_miscellaneous_donate_title">حمایت</string>
+    <string name="settings_miscellaneous_improve_translations_title">بهبود ترجمه</string>
+    <string name="settings_miscellaneous_rate_us_title">امتیاز به برنامه</string>
+    <string name="settings_miscellaneous_privacy_policy_title">حریم خصوصی</string>
     <string name="settings_btn_logout">خروج</string>
     <string name="settings_send_verification_message_success">ایمیل تأیید با موفقیت به صندوق ایمیلتان ارسال شد.</string>
     <string name="settings_send_verification_email_error_email_not_provided">ایمیلی به حساب متصل نیست.</string>
