--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -384,7 +384,8 @@
     <string name="settings_miscellaneous_rate_us_title">Rate Us</string>
     <string name="settings_miscellaneous_privacy_policy_title">Privacy Policy</string>
     <string name="settings_btn_logout">Logout</string>
-    <string name="settings_send_verification_message_success">The verification email has been successfully sent to your inbox.</string>
+    <string name="settings_verification_email_sent_dialog_btn_confirm">Confirm</string>
+    <string name="settings_verification_email_sent_dialog_message">The verification email has been successfully sent to your inbox.</string>
     <string name="settings_send_verification_email_error_email_not_provided">An email address must be provided.</string>
 
 
