--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -389,14 +389,14 @@
     <string name="settings_send_verification_email_error_email_not_provided">An email address must be provided.</string>
 
 
-    <string name="linked_accounts_text_title">Linked Accounts</string>
+    <string name="linked_accounts_app_bar_title">Linked Accounts</string>
     <string name="linked_accounts_title_google">Google</string>
-    <string name="linked_accounts_title_twitter">Twitter</string>
-    <string name="linked_accounts_title_facebook">Facebook</string>
+    <string name="linked_accounts_title_x">X</string>
+    <string name="linked_accounts_title_github">GitHub</string>
     <string name="linked_accounts_status_connect">Connect</string>
     <string name="linked_accounts_status_disconnect">Disconnect</string>
     <string name="linked_accounts_error_email_exists_with_different_credentials">An account already exists with the same email address but different sign-in credentials.</string>
-    <string name="linked_accounts_error_email_exists">An account with the provided email already exists.</string>
+    <string name="linked_accounts_error_account_with_same_email_exists">An account with the provided email already exists.</string>
 
 
     <string name="change_email_app_bar_title">Change Email Address</string>
