--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -397,8 +397,11 @@
     <string name="linked_accounts_providers_github_title">GitHub</string>
     <string name="linked_accounts_provider_action_connect">Connect</string>
     <string name="linked_accounts_provider_action_disconnect">Disconnect</string>
+    <string name="linked_accounts_google_error_access_credential_manager">Unable to access the Credential Manager.</string>
+    <string name="linked_accounts_google_error_corrupted_or_expired_credential">The provided credential is corrupted or has expired.</string>
+    <string name="linked_accounts_google_error_unexpected_credential_type">Credential is not of type Google ID!</string>
+    <string name="linked_accounts_google_error_invalid_google_id_token">Received an invalid Google ID token response.</string>
     <string name="linked_accounts_error_email_exists_with_different_credentials">An account already exists with the same email address but different sign-in credentials.</string>
-    <string name="linked_accounts_error_account_with_same_email_exists">An account with the provided email already exists.</string>
 
 
     <string name="change_email_app_bar_title">Change Email Address</string>
