--- a/app/src/main/res/values-fa-rIR/strings.xml
+++ b/app/src/main/res/values-fa-rIR/strings.xml
@@ -171,14 +171,22 @@
     <string name="base_app_review_dialog_btn_never">نه، ممنون</string>
 
 
-    <string name="warranties_text_title">فهرست گارانتی‌ها</string>
-    <string name="warranties_menu_hint_search">جستجو بر اساس عنوان…</string>
-    <string name="warranties_text_empty_warranties_list">در حال حاضر هیچ گارانتی در لیست شما وجود ندارد. با کلیک بر روی <font fgcolor="#1C53F4">دکمه افزودن</font> می‌توانید یک گارانتی اضافه کنید.</string>
-    <string name="warranties_text_empty_search_result_list">هیچ گارانتی‌ای پیدا نکردیم که با جستجوی شما برای <font fgcolor="#1C53F4">%s</font> مطابقت داشته باشد.</string>
-    <string name="warranties_list_status_valid">معتبر</string>
-    <string name="warranties_list_status_soon">به‌زودی</string>
-    <string name="warranties_list_status_expired">منقضی‌شده</string>
-    <string name="warranties_list_is_lifetime">گارانتی مادام‌العمر</string>
+    <string name="warranties_app_bar_title">فهرست گارانتی‌ها</string>
+    <string name="warranties_search_content_description_">جستجو</string>
+    <string name="warranties_search_textfield_hint">جستجو بر اساس عنوان…</string>
+    <!--Placeholder is for the color value-->
+    <string name="warranties_error_empty_list"><![CDATA[در حال حاضر فهرست گارانتی‌های شما خالی است. برای شروع، روی دکمه <font color="#%s">افزودن گارانتی</font> کلیک کنید.]]></string>
+    <!--
+    Placeholders:
+    • %1$s: Search Phrase Color
+    • %2$s: Search Phrase
+    • %3$s: Add Warranty Button Color
+    -->
+    <string name="warranties_search_error_empty_result"><![CDATA[هیچ گارانتی‌ای پیدا نکردیم که با جستجوی شما برای <font color="#%1$s"><b>%2$s</b></font> مطابقت داشته باشد. سعی کنید جستجوی خود را تعییر دهید یا با دکمه <font color="#%3$s">افزودن گارانتی</font>، مورد جدیدی اضافه کنید.]]></string>
+    <string name="warranties_expiration_status_valid">معتبر</string>
+    <string name="warranties_expiration_status_soon">به‌زودی</string>
+    <string name="warranties_expiration_status_expired">منقضی‌شده</string>
+    <string name="warranties_expiry_lifetime">گارانتی مادام‌العمر</string>
     <!--
     Placeholders:
     • %1$s: Month Name
@@ -190,8 +198,8 @@
     • en-GB: 25th of December, 2022
     • fa-IR: بیست و پنجم دسامبر، ۲۰۲۲
     -->
-    <string name="warranties_list_format_date">%2$s %1$s، %3$d</string>
-    <string-array name="warranties_list_day_with_suffix">
+    <string name="warranties_expiry_date">%2$s %1$s، %3$d</string>
+    <string-array name="warranties_day_with_suffix">
         <item>اول</item>
         <item>دوم</item>
         <item>سوم</item>
@@ -224,7 +232,7 @@
         <item>سی‌ام</item>
         <item>سی و یکم</item>
     </string-array>
-    <string-array name="warranties_list_month_name">
+    <string-array name="warranties_month_name">
         <item>ژانویه</item>
         <item>فوریه</item>
         <item>مارس</item>
