--- a/app/src/main/res/values-fa-rIR/strings.xml
+++ b/app/src/main/res/values-fa-rIR/strings.xml
@@ -74,6 +74,7 @@
     <string name="auth_method_google_error_corrupted_or_expired_credential">فرایند ورود به حساب کاربری منقضی یا دچار نقص شده است.</string>
     <string name="auth_method_google_error_unexpected_credential_type">Credential is not of type Google ID!</string>
     <string name="auth_method_google_error_invalid_google_id_token">Received an invalid Google ID token response.</string>
+    <string name="auth_other_methods_error_another_operation_is_in_progress">عملیات دیگری در جریان است. لطفاً صبر کنید تا تمام شود.</string>
     <string name="auth_other_methods_error_account_not_exist">حسابی با ایمیل وارد شده وجود ندارد.</string>
     <string name="auth_other_methods_error_corrupted_or_expired_credential">فرایند ورود به حساب کاربری منقضی یا دچار نقص شده است.</string>
     <string name="auth_other_methods_error_email_exists_with_different_credentials">حسابی با ایمیل وارد شده اما با روش‌های ورود متفاوت از قبل وجود دارد.</string>
@@ -408,6 +409,7 @@
     <string name="linked_accounts_google_error_corrupted_or_expired_credential">فرایند ورود به حساب کاربری منقضی یا دچار نقص شده است.</string>
     <string name="linked_accounts_google_error_unexpected_credential_type">Credential is not of type Google ID!</string>
     <string name="linked_accounts_google_error_invalid_google_id_token">Received an invalid Google ID token response.</string>
+    <string name="linked_accounts_error_another_operation_is_in_progress">عملیات دیگری در جریان است. لطفاً صبر کنید تا تمام شود.</string>
     <string name="linked_accounts_error_corrupted_or_expired_credential">فرایند ورود به حساب کاربری منقضی یا دچار نقص شده است.</string>
     <string name="linked_accounts_error_email_exists_with_different_credentials">حسابی با ایمیل وارد شده اما با روش‌های ورود متفاوت از قبل وجود دارد.</string>
 
